Reorganize modules; Add http client (unfinished) code.