@@ -11,6 +11,7 @@
         <module>core</module>
         <module>proactor</module>
         <module>io</module>
+        <module>examples</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -58,6 +59,30 @@
             <dependency>
                 <groupId>org.pragmatica</groupId>
                 <artifactId>proactor</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.pragmatica</groupId>
+                <artifactId>io-net</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.pragmatica</groupId>
+                <artifactId>io-util</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.pragmatica</groupId>
+                <artifactId>io-dns</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.pragmatica</groupId>
+                <artifactId>io-protocol</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -127,10 +152,15 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0-M5</version>
                     <configuration>
-                        <forkCount>1</forkCount>
+                        <excludedGroups>Infinite, Benchmark</excludedGroups>
                         <reuseForks>false</reuseForks>
-                        <argLine>--enable-preview</argLine>
-                        <argLine>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
+                        <argLine>
+                            --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+                            --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+                            --enable-native-access=ALL-UNNAMED
+                            ${java.enable-preview}
+                            -Xmx1024m
+                        </argLine>
                     </configuration>
                 </plugin>
                 <plugin>
