@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>proactor</artifactId>
-    <name>Async I/O Proactor</name>
+    <name>I/O Proactor</name>
     <packaging>jar</packaging>
 
     <properties>
@@ -179,19 +179,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <reuseForks>false</reuseForks>
-                    <argLine>
-                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
-                        --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
-                        ${java.enable-preview}
-                        -Xmx1024m
-                    </argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
